TASK: Move preview badge to the right side of the secondary toolbar to prevent overlaps

--- a/packages/neos-ui/src/Containers/SecondaryToolbar/style.module.css
+++ b/packages/neos-ui/src/Containers/SecondaryToolbar/style.module.css
@@ -27,15 +27,11 @@
 }
 
 .secondaryToolbar__previewBadge {
-    position: absolute;
-    left: 50%;
-    bottom: -1px;
     display: flex;
     align-items: center;
     padding: var(--spacing-Quarter) var(--spacing-Half);
+    margin-bottom: -1px;
 
-    transform: translateX(-50%);
-    border-radius: 4px 4px 0 0;
     background-color: var(--colors-PrimaryBlue);
 
     color: var(--colors-ContrastBrightest);
